--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"next-pwa": "^5.4.4",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
+		"react-icons": "^4.3.1",
 		"styled-components": "^5.3.3",
 		"styled-media-query": "^2.1.2"
 	},
