--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-dom": "17.0.1",
 		"react-icons": "^4.3.1",
 		"styled-components": "^5.3.3",
+		"styled-icons": "^10.45.0",
 		"styled-media-query": "^2.1.2"
 	},
 	"devDependencies": {
