--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-icons": "^4.3.1",
+		"react-slick": "^0.29.0",
 		"styled-components": "^5.3.3",
 		"styled-icons": "^10.45.0",
 		"styled-media-query": "^2.1.2"
@@ -32,6 +33,7 @@
 		"@types/jest": "^27.0.2",
 		"@types/node": "^17.0.0",
 		"@types/react": "^17.0.37",
+		"@types/react-slick": "^0.23.8",
 		"@types/styled-components": "^5.1.18",
 		"@typescript-eslint/eslint-plugin": "^5.7.0",
 		"@typescript-eslint/parser": "^5.7.0",
