--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"test:watch": "jest --watch",
 		"generate": "yarn plop --plopfile ./generators/plopfile.js",
 		"storybook": "start-storybook -s ./public -p 6006",
-		"build-storybook": "build-storybook -s ./public"
+		"build-storybook": "build-storybook -s ./public",
+		"typecheck": "tsc --projet tsconfig.json --noEmit"
 	},
 	"dependencies": {
 		"next": "10.0.7",
