--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@storybook/react": "^6.4.9",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^12.1.2",
+		"@testing-library/user-event": "^14.2.0",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^17.0.0",
 		"@types/react": "^17.0.37",
