--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"typecheck": "tsc --projet tsconfig.json --noEmit"
 	},
 	"dependencies": {
+		"@styled-icons/boxicons-solid": "^10.38.0",
 		"@styled-icons/fa-brands": "^10.38.0",
 		"next": "10.0.7",
 		"next-pwa": "^5.4.4",
