--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"generate": "yarn plop --plopfile ./generators/plopfile.js",
 		"storybook": "start-storybook -s ./public -p 6006",
 		"build-storybook": "build-storybook -s ./public",
-		"typecheck": "tsc --projet tsconfig.json --noEmit"
+		"typecheck": "tsc --projet tsconfig.json --noEmit",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"@styled-icons/boxicons-solid": "^10.38.0",
@@ -45,7 +46,7 @@
 		"eslint-plugin-react": "^7.27.1",
 		"eslint-plugin-react-hooks": "^4.3.0",
 		"eslint-plugin-storybook": "^0.5.3",
-		"husky": "^7.0.4",
+		"husky": "^8.0.1",
 		"jest": "^27.4.5",
 		"jest-dom": "^4.0.0",
 		"jest-styled-components": "^7.0.5",
