--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@styled-icons/boxicons-regular": "^10.38.0",
 		"@styled-icons/boxicons-solid": "^10.38.0",
 		"@styled-icons/fa-brands": "^10.38.0",
 		"next": "12.2.2",
